2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* contentcontrol.cpp: We no longer clear the template when
	  setting a new value to the Content property on a
	  ContentControl.

2010-06-30  Sebastien Pouliot  <sebastien@ximian.com>

	* media.cpp: Use ImageFailed, no the page OnError, for invalid
	paths or policy violations. Fix remaining issue on DRT171 and 173

2010-06-29  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (HandleDzParsed): You can't pass a DO as the
	second arg to SetValue(), it only takes Values. Get rid of this
	anyway, since the collection is auto-created, there should never
	be a need to set our own collection value.

	* deepzoomimagetilesource.cpp (GetTileLayer): Move the
	GetTileWidth() call outside the loop. Also make sure
	display_rects->len > 0 before entering the code segment.

2010-06-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/pal-gtk.cpp: Log why a dialog failed.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Verify that HttpResponse::AppendHeader is main-thread only.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Don't abort if status isn't 200, start the request instead
	(even though the status is a failure status, we might get data we need).
	Always call SetStatus, and compute the status text as the browsers do. We also
	can't call HttpRequest::Started until all headers have been processed, so
	do that the first time we get data.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp|h: CurlDownloaderRequest::AbortImpl: Don't use g_idle_add,
	use EO's AddTickCall instead, which ensures the object doesn't get freed
	before the callback is executed. Also use a callback to close the curl handle,
	since we may already be inside a curl callback and we'll deadlock.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: CurlHttpHandler::GetData: we need to lock the handles list