@@ -54,7 +54,7 @@ private:
 /* @Namespace=System.Windows.Controls */
 class ControlTemplate : public FrameworkTemplate {
 public:
-	/* @PropertyType=ManagedTypeInfo,ManagedPropertyType=System.Type,Access=Internal,ManagedAccessorAccess=Public,ManagedFieldAccess=Private */
+	/* @PropertyType=ManagedTypeInfo,AutoCreator=ControlTypeCreator,ManagedPropertyType=System.Type,Access=Internal,ManagedAccessorAccess=Public,ManagedFieldAccess=Private */
 	const static int TargetTypeProperty;
 	
 	/* @GenerateCBinding,GeneratePInvoke */
